fix: dropdown menu of dirent list view on mobile (#8781)

--- a/frontend/src/css/dirent-list-item.css
+++ b/frontend/src/css/dirent-list-item.css
@@ -192,11 +192,11 @@
 }
 
 .mobile-menu-item {
-  padding: 8px 12px;
   color: var(--bs-body-color);
   background: transparent;
   border: none;
-  text-align: left;
+  text-align: center;
+  line-height: 1;
   width: 100%;
   font-size: 14px;
 }
